Bug 301486 - additional empty queue when batch processing images using toolbar button
Summary: additional empty queue when batch processing images using toolbar button
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: BatchQueueManager-Workflow (other bugs)
Version First Reported In: 2.6.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-09 02:46 UTC by Danni Coy
Modified: 2016-07-04 06:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Danni Coy 2012-06-09 02:46:10 UTC
When using the toolbar button to batch process images digikam adds these images to a second queue leaving an empty queue which stops image processing until it is dealt with.

Reproducible: Always

Steps to Reproduce:
1. select some images, press the "Batch Queue Manager" button on the toolbar
2.
3.
Actual Results:  
images are added to a new queue (#2) leaving queue #1 with no images and no operations.

Expected Results:  
if the first queue has no images and no operations the images should have been added to this queue instead.
Comment 1 Marcel Wiesweg 2012-07-15 18:42:06 UTC
In addition to fixing this bug, I have a question for general discussion:
Assume there is a non-empty queue. Should images with the default action be added to that queue, or to a new one? Same question put differently: Should "Add to New Queue" or "Add to current queue" be the default action?
Comment 2 Marcel Wiesweg 2012-07-16 20:31:51 UTC
Maybe items are added to the current queue as long as this one is not started, and add a new queue when the current one is running?
Of course, there's still the actions to add the current queue or Add to new queue; it's just about "doing the right thing" per default.
Comment 3 Marcel Wiesweg 2012-07-16 20:42:27 UTC
Git commit 801a15da71c25c0559cc052898cfea93767052e2 by Marcel Wiesweg.
Committed on 16/07/2012 at 22:41.
Pushed by mwiesweg into branch 'master'.

Reuse an unused, empty queue when adding first items.
TODO: Choosing proper default action, see bug report discussion

M  +2    -1    NEWS
M  +5    -3    digikam/items/imageviewutilities.cpp
M  +19   -0    utilities/queuemanager/main/queuemgrwindow.cpp
M  +2    -0    utilities/queuemanager/main/queuemgrwindow.h

http://commits.kde.org/digikam/801a15da71c25c0559cc052898cfea93767052e2