Reuse an unused, empty queue when adding first items. TODO: Choosing proper default action, see bug report discussion

BUG: 301486